@@ -11,10 +11,6 @@
 #ifndef __RAMDISK_SUPPORT_H
 #define __RAMDISK_SUPPORT_H
 
-#ifdef HAVE_CONFIG_H
-#include "config.h"
-#endif
-
 #define  RAMDISK_BLOCK_SIZE  (512)
 #define  RAMDISK_BLOCK_COUNT (1024)
 #define  RAMDISK_PATH "/dev/ramdisk"
